# emails_and_fixture

./: .gitignore  README.md  config.ini  conftest.py  helpers.py  main.py  poetry.toml  pyproject.toml  test_email.py
